k8s_myhero_ui_v1.yml
apiVersion: v1
kind: Service
metadata:
  name: myhero-ui
  namespace: myhero
  labels:
    app: myhero
    tier: ui
spec:
  ports:
  - port: 80
    name: http
    targetPort: http
  selector:
    app: myhero
    tier: ui
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myhero-ui-v1
  namespace: myhero
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: myhero
        tier: ui
        version: v1
    spec:
      containers:
      - name: myhero-ui
        image: ciscodevnet/myhero-ui-v1:latest
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 100m
            memory: 48M
      restartPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myhero-ui-v2
  namespace: myhero
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: myhero
        tier: ui
        version: v2
    spec:
      containers:
      - name: myhero-ui
        image: ciscodevnet/myhero-ui-v2:latest
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 100m
            memory: 48M
      restartPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myhero-ui-v3
  namespace: myhero
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: myhero
        tier: ui
        version: v3
    spec:
      containers:
      - name: myhero-ui
        image: ciscodevnet/myhero-ui-v3:latest
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 100m
            memory: 48M
      restartPolicy: Always
