2-ui_canary_inject_v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myhero-ui
spec:
  hosts:
  - 34.77.171.121
  gateways:
  - myhero-gateway
  http:
    route:
    - destination:
        host: myhero-ui.myhero.svc.cluster.local
        subset: v1
      weight: 80
    - destination:
        host: myhero-ui.myhero.svc.cluster.local
        subset: v2
      weight: 20
