2-ui_inject_delay_v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myhero-ui
spec:
  hosts:
  - 34.77.171.121
  gateways:
  - myhero-gateway
  http:
  - fault:
      delay:
        percent: 100
        fixedDelay: 5s
    route:
    - destination:
        host: myhero-ui.myhero.svc.cluster.local
        subset: v2
